# tst-playwright

./: .coverage  .gitignore  BUGFIX_ANALYSIS.md  Makefile  README.md  TestCase.md  dockerfile  pyproject.toml  pytest.ini  requirements.txt  run_test.sh
.github/ISSUE_TEMPLATE/: user-story-.md
.github/workflows/: ai-code-review.yml  backupfile  ci-pipeline.yml  github-actions-demo.yml
ecart/: .env  mytest.py  pyproject.toml
ecart/configs/: config.py  settings.py
ecart/locators/: home_page_locators.py  login_page_locators.py
ecart/pages/: base_page.py  home_page.py  register_page.py
ecart/pages/auth/: home_page.py  login_page.py  logout_page.py  register_page.py
ecart/pages/product/: product_page.py
ecart/pages/user/: account_page.py
ecart/self_healing/: README.md  __init__.py  graph.py  healer.py  nodes.py  providers.py  state.py
ecart/test_data/: credentials.json  products.json
ecart/tests/: conftest.py  test_deepdive.py  test_home.py  test_poc.py  test_retry_demo.py  test_ui_validations.py
ecart/tests/api_tests/: base_utils.py  conftest.py  test_go_rest.py
ecart/tests/e2e/: conftest.py  test_checkout.py  test_home.py  test_login_page.py  test_register_page.py  test_self_healing.py
ecart/tests/mock_aws/: my_lambda.py  test_mock_lambda.py
ecart/tests/ui_tests/: conftest.py  test_deepdive.py  test_poc.py  test_ui_validations.py
ecart/utilities/: api_utils.py  data_utils.py  faker_helper.py  logger.py  secret_manager.py  user_factory.py
scripts/: run_checks.py  setup_venv.sh
